<resources>
    <string name="app_name">SPDB</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_started">Get started</string>
    <string name="title">SPDB Projekt 20L</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_properties">Properties</string>
    <string name="menu_map">Map</string>

    <string name="add_start_point">Add start point</string>
    <string name="add_end_point">Add end point</string>
    <string name="latitude_text_view">Latitude:</string>
    <string name="longitude_text_view">Longitude:</string>
    <string name="set_radius">Set radius:</string>
    <string name="set_distance">Set min distance:</string>
    <string name="find_road">Find Road</string>

    <string name="title_best">Best way:</string>
    <string name="title_alternative_1">Alternative way 1:</string>
    <string name="title_alternative_2">Alternative way 2:</string>
    <string name="text_distance">Distance:</string>
    <string name="text_time">Time:</string>
    <string name="title_sections_distance">Sections:</string>
</resources>
