<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.properties.PropertiesFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_find_road"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/find_road"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_add_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_start_point"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_start_lat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/latitude_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_add_start" />

        <TextView
            android:id="@+id/text_view_start_lat_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@id/fab_add_start"
            app:layout_constraintStart_toEndOf="@id/text_view_start_lat"
            app:layout_constraintTop_toBottomOf="@id/title_add_start" />

        <TextView
            android:id="@+id/text_view_start_lon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/longitude_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_start_lat" />

        <TextView
            android:id="@+id/text_view_start_lon_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@id/fab_add_start"
            app:layout_constraintStart_toEndOf="@id/text_view_start_lat"
            app:layout_constraintTop_toBottomOf="@id/text_view_start_lat_position" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_add_start"
            app:srcCompat="@android:drawable/ic_menu_compass"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_add_start">

        <TextView
            android:id="@+id/title_add_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_end_point"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_end_lat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/latitude_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_add_end" />

        <TextView
            android:id="@+id/text_view_end_lat_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@id/fab_add_end"
            app:layout_constraintStart_toEndOf="@id/text_view_end_lat"
            app:layout_constraintTop_toBottomOf="@id/title_add_end" />

        <TextView
            android:id="@+id/text_view_end_lon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/longitude_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_end_lat" />

        <TextView
            android:id="@+id/text_view_end_lon_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@id/fab_add_end"
            app:layout_constraintStart_toEndOf="@id/text_view_end_lat"
            app:layout_constraintTop_toBottomOf="@id/text_view_end_lat_position" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_add_end"
            app:srcCompat="@android:drawable/ic_menu_compass" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_add_end">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/set_radius"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/seek_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:isb_max="1000"
            app:isb_min="100"
            app:isb_progress="100"
            app:isb_seek_smoothly="false"
            app:isb_ticks_count="10"
            app:isb_show_tick_marks_type="oval"
            app:isb_tick_marks_size="13dp"
            app:isb_tick_marks_drawable="@drawable/drawable_marks"
            app:isb_show_tick_texts="true"
            app:isb_tick_texts_size="10sp"
            app:isb_tick_texts_color="@color/colorAccent"
            app:isb_thumb_drawable="@drawable/drawable_thumb"
            app:isb_thumb_color="@color/colorAlternativeWayFill"
            app:isb_thumb_size="20dp"
            app:isb_show_indicator="circular_bubble"
            app:isb_indicator_color="@color/colorAccent"
            app:isb_indicator_text_color="@color/colorPrimary"
            app:isb_indicator_text_size="18sp"
            app:isb_track_background_color="@color/colorAlternativeWayFill"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/colorPOI"
            app:isb_track_progress_size="4dp"
            app:isb_only_thumb_draggable="false"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_radius">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/set_distance"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/seek_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:isb_max="10"
            app:isb_min="1"
            app:isb_progress="1"
            app:isb_seek_smoothly="false"
            app:isb_ticks_count="10"
            app:isb_show_tick_marks_type="oval"
            app:isb_tick_marks_size="13dp"
            app:isb_tick_marks_drawable="@drawable/drawable_marks"
            app:isb_show_tick_texts="true"
            app:isb_tick_texts_size="10sp"
            app:isb_tick_texts_color="@color/colorAccent"
            app:isb_thumb_drawable="@drawable/drawable_thumb"
            app:isb_thumb_color="@color/colorAlternativeWayFill"
            app:isb_thumb_size="20dp"
            app:isb_show_indicator="circular_bubble"
            app:isb_indicator_color="@color/colorAccent"
            app:isb_indicator_text_color="@color/colorPrimary"
            app:isb_indicator_text_size="18sp"
            app:isb_track_background_color="@color/colorAlternativeWayFill"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/colorPOI"
            app:isb_track_progress_size="4dp"
            app:isb_only_thumb_draggable="false"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_distance"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>